# Jellyfish

./: .gitignore  .travis.yml  CHANGES  CODE_OF_CONDUCT.md  LICENSE  LICENSE-BSD-3-Clause  LICENSE_JSMN  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  allocators_malloc.hpp  atomic_gcc.hpp  compacted_dumper.hpp  compacted_hash.hpp  compare_dump  compare_dump.pl  compat.sh.in  concurrent_queues.hpp  config.h.in  config.rpath  configure  configure.ac  development.mk  dump_stats.cc  dump_stats_compacted.cc  dumper.hpp  gtest.mk  hash.hpp  hash_merge.cc  header-license  index.md  invertible_hash_array.hpp  invertible_hash_config.hpp  jellyfish-1.0.pc.in  jellyfish-1.1.pc.in  jellyfish.cc  jellyfish.def  (+15 more)
.github/workflows/: c-cpp.yml
_invertible_hash/: local.mk
_packed_key_value/: config.hpp  local.mk
doc/: Makefile  Readme.md  UserGuide.lyx  generate_options_tex.sh  help_parse.rb  help_parse.treetop  jellyfish.html  jellyfish.man  jellyfish.tex  main.tex  option_to_tex  options.tex  transfile
examples/: README
examples/count_in_file/: Makefile  README  count_in_file.cc
examples/jf_count_dump/: Makefile  README  jf_count_dump.cc
examples/query_per_sequence/: Makefile  README  query_per_sequence.cc  sequence_mers.hpp
examples/swig/: README.md  dump.pl  dump.py  dump.rb  query.pl  query.py  query.rb
gnulib/: Makefile  Makefile.am  Makefile.in  alloca.h  argp-ba.c  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-fs-xinl.c  argp-help.c  argp-namefrob.h  argp-parse.c  argp-pin.c  argp-pv.c  argp-pvh.c  argp-xinl.c  argp.h  mempcpy.c  sleep.c  stdint.h  stdio.h  stdlib.h  strcasecmp.c  string.h  strings.h  strings.in.h  strncasecmp.c  sysexits.in.h  unistd.h  wchar.h
gnulib/.deps/: argp-ba.Po  argp-eexst.Po  argp-fmtstream.Po  argp-fs-xinl.Po  argp-help.Po  argp-parse.Po  argp-pin.Po  argp-pv.Po  argp-pvh.Po  argp-xinl.Po  asnprintf.Po  basename-lgpl.Po  dirname-lgpl.Po  getopt.Po  getopt1.Po  mempcpy.Po  printf-args.Po  printf-parse.Po  (+6 more)
jellyfish/: Makefile.am  Makefile.in  aligned_values_array.hpp  allocators_malloc.hpp  allocators_mmap.cc  allocators_mmap.hpp  allocators_shm.hpp  atomic_gcc.hpp  backtrace.cc  backtrace.hpp  binary_dumper.hpp  bstream.hpp  capped_integer.hpp  circular_buffer.hpp  cite.cc  cite.ggo  cite.yaggo  cite_cmdline.cc  cite_cmdline.hpp  compacted_dumper.hpp  compacted_hash.hpp  concurrent_hash_counters.hpp  concurrent_queues.hpp  count_main.yaggo  count_main_cmdline.hpp  counter.hpp  cpp_array.hpp  dbg.cc  dbg.hpp  direct_indexing_array.hpp  direct_sorted_dumper.hpp  divisor.hpp  dna_codes.cc  dna_codes.hpp  double_fifo_input.cc  double_fifo_input.hpp  dump_cmdline.cc  dump_cmdline.hpp  dump_fastq_main.cc  dump_fastq_main.ggo  (+173 more)
lib/: allocators_mmap.cc  allocators_mmap.hpp  allocators_shm.hpp  atomic_gcc.hpp  err.cc  generator_manager.cc  hash_function.hpp  int128.cc  jsoncpp.cpp  locks_pthread.hpp  mer_dna.cc  misc.cc  misc.hpp  rectangular_binary_matrix.cc  square_binary_matrix.cc  square_binary_matrix.hpp  storage.cc  thread_exec.cc  time.cc
m4/: .gitignore  argp.m4  gnulib-cache.m4  gnulib-comp.m4  m4-ax_ext.m4  m4-ax_gcc_x86_avx_xgetbv.m4  m4-ax_perl_ext.m4  m4-ax_python_devel.m4  m4-ax_ruby_ext.m4  mempcpy.m4  sleep.m4  strcase.m4  strings_h.m4  sysexits.m4
sub_commands/: bc_main.cc  bc_main_cmdline.yaggo  bf_main.cc  bf_main_cmdline.yaggo  cite_main.cc  cite_main_cmdline.yaggo  count_main.cc  count_main_cmdline.yaggo  dump_main.cc  dump_main_cmdline.yaggo  histo_main.cc  histo_main_cmdline.yaggo  info_main.cc  info_main_cmdline.yaggo  intersection_cmdline.yaggo  intersection_main.cc  intersection_main_cmdline.yaggo  jellyfish.cc  mem_main.cc  mem_main_cmdline.yaggo  merge_main.cc  merge_main_cmdline.yaggo  query_main.cc  query_main_cmdline.yaggo  stats_main.cc  stats_main_cmdline.yaggo  unique_main.cc  unique_main_cmdline.yaggo
swig/: Makefile.am  Readme.md  Tuprules.tup  hash_counter.i  hash_set.i  jellyfish.i  mer_dna.i  mer_file.i  string_mers.i
swig/perl5/: Makefile.PL  Tupfile  test_jellyfish.pl  test_mer_file.pl
swig/perl5/t/: test_hash_counter.t  test_jellyfish.t  test_mer_file.t  test_string_mers.t
swig/python/: Makefile.am  Tupfile  __init__.py  generators.i  jellyfish.py  setup.py  test_hash_counter.py  test_jellyfish.py  test_mer_file.py  test_string_mers.py
swig/ruby/: Tupfile  extconf.rb  test_hash_counter.rb  test_jellyfish.rb  test_mer_file.rb  test_string_mers.rb
swig/tests/: Tupfile  test_perl.pl  test_ruby.rb
tests/: Makefile  Makefile.am  big.sh  bloom_counter.sh  bloom_filter.sh  compat.sh.in  from_stream.sh  from_stream_fastq.sh  generate_fastq_sequence.sh  generate_sequence.sh  large_key.sh  merge.sh  min_qual.sh  multi_file.sh  multi_file_fastq.sh  parallel_direct_indexing.sh  parallel_fastq_direct_indexing.sh  parallel_fastq_hashing.sh  parallel_fastq_sequence_hashing.sh  parallel_hashing.sh  parsers.sh  quality_filter.sh  raw_hash.sh  sam.sh  serial_direct_indexing.sh  serial_hashing.sh  small.sh  small_mers.sh  subset_hashing.sh  swig_perl.sh  swig_python.sh  swig_ruby.sh  test_intersection.sh  test_misc.cc  test_packed_key_value_array.cc  test_square_binary_matrix.cc
travis/: before_install.sh  script.sh
unit_tests/: Makefile  test_allocators_mmap.cc  test_atomic_bits_array.cc  test_binary_dumper.cc  test_bstream.cc  test_compacted_hash.cc  test_cond.cc  test_cooperative_pool.cc  test_cooperative_pool2.cc  test_dumpers.cc  test_file_header.cc  test_generator_manager.cc  test_hash_counter.cc  test_intersection.cc  test_large_block.cc  test_large_hash_array.cc  test_main.cc  test_main.hpp  test_main_cmdline.yaggo  test_mapped_file.cc  test_mer_dna.cc  test_mer_dna_bloom_counter.cc  test_mer_heap.cc  test_mer_iterator.cc  test_mer_overlap_sequence_parser.cc  test_misc.cc  test_mutex.cc  test_offsets_key_value.cc  test_packed_key_value_array.cc  test_rectangular_binary_matrix.cc  test_simple_circular_buffer.cc  test_square_binary_matrix.cc  test_stdio_filebuf.cc  test_stream_iterator.cc  test_text_dumper.cc  test_token_ring.cc  test_whole_sequence_parser.cc  unit_tests.sh
(+64 files in other folders)
